--- a/.github/workflows/main_moviebio.yml
+++ b/.github/workflows/main_moviebio.yml
@@ -23,7 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build MovieBioApp.sln --configuration Release
+        run: dotnet build MovieBioApp/MovieBioApp.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
